# image_caption_machine

./: CMakeLists.txt  CMakeLists.txt~  README.md  alexa.json  interaction_model.json  package.xml  setup.py
launch/: image_caption_machine.launch  image_caption_machine_tests.launch
msg/: ImageNumpy.msg  State.msg  WorldPlace.msg
nodes/: alexa_server.py  caption_client.py  caption_server.py  caption_service.py  machine_server.py  navigator_server.py  simulate_camera.py  simulate_client.py  world_server.py
scripts/: alexa_server.py~  caption_client.py  caption_service.py  simulate_camera.py  simulate_client.py  start_ngrok.sh
src/captioning_utils/: __init__.py  handle_request.py  machine.py  machine.py~
src/captioning_utils/data/: get_vocab.py  word.vocab
src/image_caption_machine/: __init__.py  machine.py  place.py  utils.py  values.py  world_helper.py
src/image_caption_machine/amazon/: __init__.py  alexa.py  aws_client.py
src/image_caption_machine/aws/: __init__.py  aws_client.py  aws_post.py
src/image_caption_machine/captioner/: __init__.py  abstract.py  client.py  helper.py  server.py
src/image_caption_machine/convert/: README.txt  json.py  message.py
src/image_caption_machine/machine/: __init__.py  abstract.py  client.py  helper.py  server.py
src/image_caption_machine/navigator/: __init__.py  abstract.py  client.py  helper.py  server.py
src/image_caption_machine/world/: __init__.py  abstract.py  client.py  helper.py  place.py  server.py
srv/: Caption.srv  CaptionString.srv  NavigatorAbort.srv  NavigatorFinished.srv  WorldAppend.srv  WorldClosest.srv  WorldLength.srv  WorldLookup.srv  WorldString.srv
tests/: machine_tests.py
