<?xml version="1.0"?>
<package format="2">
  <name>image_caption_machine</name>
  <version>0.0.0</version>
  <description>The image_caption_machine package</description>
  <maintainer email="brandon@btrabucco.com">Brandon Trabucco</maintainer>
  <license>MIT</license>
  <author email="brandon@btrabucco.com">Brandon Trabucco</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>world_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>python-tensorflow-pip</build_depend>


  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>world_msgs</build_export_depend>
  <build_export_depend>python-numpy</build_export_depend>
  <build_export_depend>python-tensorflow-pip</build_export_depend>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>world_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-tensorflow-pip</exec_depend>

 
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
